--- a/ex1/style.css
+++ b/ex1/style.css
@@ -3,6 +3,23 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     line-height: 1.6em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 1.6;
+    background: #fff1d6d6;
+
+}
+
+h1 a {
+    color: #7e9f19;
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
+    padding: 5px;
+    border-radius: 0 25px 25px 0;
+}
+
+h1 a:hover {
+    background-color: #7e9f19;
+    color: white;
 }
 
 #container {
@@ -11,8 +28,30 @@ body {
 }
 
 .place {
+    height: auto;
     border: 1px solid #ccc;
     border-color: #ccc #999 #999 #ccc;
     margin-bottom: 20px;
     padding: 10px;
+    background-color: white;
+
+}
+
+.place h2 {
+    border-bottom: 1px dashed #7E9F19;
+    margin: 0;
+}
+.place a {
+    color: #2c88a7;
+    font-weight: bold;
+}
+
+.place img {
+    width: 200px;
+    height: 120px;
+    display: block;
+    margin-top: 10px;
+    float: left;
+    border: 1px solid #7E9F19;
+    margin: 10px;
 }
