--- a/ex1/style.css
+++ b/ex1/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     line-height: 1.6em;
@@ -23,7 +29,7 @@ h1 a:hover {
 }
 
 #container {
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 960px;
 }
 
@@ -32,7 +38,7 @@ h1 a:hover {
     max-width: 660px;
 }
 
-.place {
+article {
     height: auto;
     border: 1px solid #ccc;
     border-color: #ccc #999 #999 #ccc;
@@ -42,16 +48,16 @@ h1 a:hover {
 
 }
 
-.place h2 {
+article h2 {
     border-bottom: 1px dashed #7E9F19;
     margin: 0;
 }
-.place a {
+article a {
     color: #2c88a7;
     font-weight: bold;
 }
 
-.place img {
+article img {
     max-width: 200px;
     height: 120px;
     display: block;
@@ -66,7 +72,7 @@ h1 a:hover {
 }
 
 
-.sidenote {
+aside {
     background-color: #fffbe4;
     border: 1px solid #c9bc8f;
     padding: 10px;
@@ -74,16 +80,17 @@ h1 a:hover {
     max-width: 260px;
 }
 
-.sidenote h3 {
+aside h3 {
     font-size: 14px;
     margin-top: 0;
 }
 
-.sidenote ol {
+aside ol {
     font-size: 12px;
+    list-style-position: inside;
 }
 
-.footer {
+footer {
     font-size: 12px;
     margin: 0 auto;
     width: 100%;
